# PillowBasics

./: LICENSE  Make.bat  MakeSolution.bat  README.md
SourceCode/: CMakeLists.txt
SourceCode/Crucible/: CMakeLists.txt  Entry.cc  Program.cc
SourceCode/Crucible/Core/: AppConstants.h  Auxiliaries.cc  Auxiliaries.h  Engine.cc  Engine.h  Texture.cc  Texture.h
SourceCode/Crucible/Core/Renderers/: D3D12Renderer.cc  Renderer.cc  Renderer.h
SourceCode/Pillow/: CMakeLists.txt  Entry.cc  Temp.cc
SourceCode/Pillow/Core/: AppConstants.h  Auxiliaries.cc  Auxiliaries.h  Constants.cc  Constants.h  Input.cc  Input.h  Mesh.cc  Mesh.h  Texture.cc  Texture.h
SourceCode/Pillow/Core/Renderers/: D3D12Renderer.cc  GLES32Renderer.cc  Renderer.cc  Renderer.h
