cmake_minimum_required(VERSION 4.0)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 20)

set(TARGET_WINDOWS_SDK 10.0.18362.0)
set(CMAKE_SYSTEM_VERSION ${TARGET_WINDOWS_SDK})
set(CMAKE_GENERATOR_PLATFORM x64,version=${TARGET_WINDOWS_SDK})
message("CMAKE_GENERATOR_PLATFORM = ${CMAKE_GENERATOR_PLATFORM}")
set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Available configuration types" FORCE)
add_compile_definitions(_UNICODE)

project(CrucibleSolution LANGUAGES CXX)
add_subdirectory(Crucible)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Crucible)